src/plugins/platforms/cocoa/qnsview.mm
@@ -125,6 +125,7 @@ QT_NAMESPACE_ALIAS_OBJC_CLASS(QNSViewMouseMoveHelper);
     Qt::MouseButtons m_frameStrutButtons;
     QString m_composingText;
     QPointer<QObject> m_composingFocusObject;
+    bool m_lastKeyDead;
     bool m_sendKeyEvent;
     bool m_dontOverrideCtrlLMB;
     bool m_sendUpAsRightButton;
@@ -142,6 +143,7 @@ QT_NAMESPACE_ALIAS_OBJC_CLASS(QNSViewMouseMoveHelper);
 {
     if ((self = [super initWithFrame:NSZeroRect])) {
         m_platformWindow = platformWindow;
+        m_lastKeyDead = false;
         m_sendKeyEvent = false;
         m_inputSource = nil;
         m_resendKeyEvent = false;
